--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1866,6 +1866,7 @@
 .type-article #form-social .field.fieldname-facebook_campus_text .label,
 .type-article #form-social .field.fieldname-short_text .label,
 .type-article #form-social .field.fieldname-twitter_ressort_text .label,
+.type-article #form-social .field.fieldname-twitter_print_text .label,
 .type-article #form-mobile .field.fieldname-mobile_text .label,
 .type-article #form-mobile .field.fieldname-mobile_image .label {
    display: none;
@@ -1879,6 +1880,7 @@
 
 .type-article #social\.short_text,
 .type-article #social\.twitter_ressort_text,
+.type-article #social\.twitter_print_text,
 .type-article #mobile\.mobile_text {
   width: 100%;
 }
@@ -1924,6 +1926,7 @@
    zeit.edit.browser.form.InlineForm and gocept.form.grouped which is hard */
 .type-article #form-social .field.fieldname-short_text,
 .type-article #form-social .field.fieldname-twitter_ressort_text,
+.type-article #form-social .field.fieldname-twitter_print_text,
 .type-article #form-social .field.fieldname-is_amp {
     border-top: 1px solid #d5dee7;
     clear: both;
@@ -1937,6 +1940,7 @@
 .type-article #form-social .field.fieldname-facebook_main_text:before ,
 .type-article #form-social .field.fieldname-short_text:before ,
 .type-article #form-social .field.fieldname-twitter_ressort_text:before ,
+.type-article #form-social .field.fieldname-twitter_print_text:before ,
 .type-article #form-social .field.fieldname-is_amp:before {
     display: block;
     font-variant: small-caps;
@@ -1954,6 +1958,9 @@
 }
 .type-article #form-social .field.fieldname-short_text:before {
     content: "Twitter";
+}
+.type-article #form-social .field.fieldname-twitter_print_text:before {
+    content: "Twitter DieZeit";
 }
 .type-article #form-social .field.fieldname-twitter_ressort_text:before {
     content: "Twitter Ressort";
