ZON-2932: Style embed helptext field

--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -2038,3 +2038,10 @@
 .type-article #form-mobile .fieldname-author_enabled .label {
     display: none;
 }
+
+.type-article form[action$="@@edit-rawtext"] .fieldname-help .label {
+    display: none;
+}
+.type-article form[action$="@@edit-rawtext"] .fieldname-help .widget {
+    margin-bottom: 1em;
+}
